updated and added image from S3